--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,2 @@
 [toolchain]
-channel = "nightly"
-components = [ "rust-src", "rustfmt", "llvm-tools-preview" ]
+components = [ "rust-src", "rustfmt", "llvm-tools" ]
